--- a/partnerprofile.html
+++ b/partnerprofile.html
@@ -144,8 +144,7 @@
     <div class="partner-banner">
         <div class="partner-container">
             <div class="partner-header">
-                <img src="https://partners.shopify.com/rails/active_storage/representations/redirect/BAh7BkkiC19yYWlscwY6BkVUewdJIglkYXRhBjsAVGkDHT0XSSIIcHVyBjsAVEkiDGJsb2JfaWQGOwBG--8471cfa8a5a552f2b26724c67c9bc1ae7dec5298/BAh7BkkiC19yYWlscwY6BkVUewdJIglkYXRhBjsAVHsIOgtmb3JtYXRJIghwbmcGOwBUOhRyZXNpemVfdG9fbGltaXRbB2kByDA6CnNhdmVyewY6DHF1YWxpdHlpV0kiCHB1cgY7AFRJIg52YXJpYXRpb24GOwBG--f06b12a831eddcafd6ceeabfed87cce3e06eb0ff/Vertex%20Dimension%20-%20Shopify%20Experts%20Logo%205.png" alt="Vertex Dimension Logo" class="partner-logo">
-<div>
+<img src="https://partners.shopify.com/rails/active_storage/representations/redirect/BAh7BkkiC19yYWlscwY6BkVUewdJIglkYXRhBjsAVGkDHT0XSSIIcHVyBjsAVEkiDGJsb2JfaWQGOwBG--8471cfa8a5a552f2b26724c67c9bc1ae7dec5298/BAh7BkkiC19yYWlscwY6BkVUewdJIglkYXRhBjsAVHsIOgtmb3JtYXRJIghwbmcGOwBUOhRyZXNpemVfdG9fbGltaXRbB2kByDA6CnNhdmVyewY6DHF1YWxpdHlpV0kiCHB1cgY7AFRJIg52YXJpYXRpb24GOwBG--f06b12a831eddcafd6ceeabfed87cce3e06eb0ff/Vertex%20Dimension%20-%20Shopify%20Experts%20Logo%205.png" alt="Vertex Dimension Logo" class="partner-logo"><div>
                     <h1 class="partner-name">Shopify Partner Profile</h1>
 <div class="partner-rating">
                         <span class="rating-stars">★★★★★</span>
@@ -199,3 +198,4 @@
     </script>
 </body>
 </html>
+
